Changelog
=========

1.1.2 (unreleased)
------------------

- Fix contenttype icons by normalizing class.
  [jone]


1.1.1 (2014-05-01)
------------------

- Fix JavaScript issues - use jQuery properly.
  [jone]


1.1 (2013-05-24)
----------------

- Translate portal type names with its own i18n domain.
  [mathias.leimgruber]

- Fix item order - sort on path.
  [mathias.leimgruber]


1.0 (2013-01-09)
----------------

- Implementation of basic features.